# rf_diffusion_all_atom

./: .gitignore  pixi.toml  pyproject.toml  recipe.yaml
.github/workflows/: conda_package.yml
rf_diffusion_all_atom/: RFDiffusionAA_paper_weights.pt
src/rf_diffusion_all_atom/: run_inference.py
