[project]
name = "rf_diffusion_all_atom"
requires-python = ">=3.9,<3.10"
scripts = { run-intference = "rf_diffusion_all_atom.run_inference:main" } 
version = "0.1.9"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
    include = ["rf_diffusion_all_atom/**/*"]
