[project]
name = "rf_diffusion_all_atom"
requires-python = ">=3.9,<3.10"
scripts = { run-inference = "rf_diffusion_all_atom.run_inference:main" } 
version = "0.1.11"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/rf_diffusion_all_atom",
  "src/rf2aa",
]
